syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.example.productanimalinfoservice.grpc";
option java_outer_classname = "ProductAnimalInfoService";

service ProductInfoService {
  rpc GetAnimalsByProduct(ProductRequest) returns (AnimalListResponse);
  rpc GetProductsByAnimal(AnimalRequest) returns (ProductListResponse);
}

message ProductRequest {
  string product_id = 1;
}

message AnimalRequest {
  string registration_number = 1;
}

message AnimalListResponse {
  repeated string registration_numbers = 1;
}

message ProductListResponse {
  repeated string product_ids = 1;
}

